# tp_multi

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  benchmark_minions.py  boss.py  boss_comunication.py  boss_minion  client.cpp  low_level_tp2.cpp  proxy.py  pyproject.toml  task.py  test_Boss.py  test_task.py
.github/workflows/: ci.yml
