[project]
name = "tp-multithreading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"