[project]
name = "tp-multithreading"
version = "0.1.0"
description = "TP Multithreading"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []  # Pas de package à builder

[tool.hatch.build]
include = [
    "*.py",
]
